@@ -1,16 +1,6 @@
-scene.file = scenes/albedo/luxball-albedo.scn
+scene.file = scenes/cameraprojuv/luxball-cameraprojuv.scn
 film.width = 800
 film.height = 800
-##
-# For BIDRICPU
-#film.filter.type = NONE
-#path.aovs.warmup.spp = 64
-##
-#path.albedospecular.type = NO_REFLECT_TRANSMIT
-#path.albedospecular.type = ONLY_REFLECT
-path.albedospecular.type = REFLECT_TRANSMIT
-path.albedospecular.glossinessthreshold = 0.05
-##
 # Film image pipeline plug-ins
 film.imagepipelines.0.0.type = GAMMA_CORRECTION
 film.imagepipelines.0.0.value = 2.2
